# MCEle_ProteinGradient

./: CMakeLists.txt  README.md
include/: particle3D.h  particlePLK13D.h  particle_manager.h  particle_managerPLK1.h
python/: CMakeLists.txt  main.py  module_2Dplotter.py  module_2Dplotter_PLK1.py  runner.sh  settingsTemplate
python/logs/: analyzer.py
python/logs/Output_example/: conc_id0_mex5.txt  conc_id0_plk1.txt  conc_id1_mex5.txt  conc_id1_plk1.txt  conc_id2_plk1.txt  log_k_mex5.txt  log_k_plk1.txt  log_mex5_ratio_slow_fast.txt  log_profileAP_mex5.txt  log_profileAP_plk1.txt  log_v_mex5.txt  log_v_plk1.txt  summary_parameter.txt
script/: analyzer.py  analyzerConc.py  plotter_3D_t_X.py
src/: CMakeLists.txt  particle3D.cpp  particlePLK13D.cpp  particle_manager.cpp  particle_managerPLK1.cpp
